@@ -1,0 +1,48 @@
+<?php
+/**
+ * @version		$Id: article.php 17217 2010-05-22 09:30:00Z infograf768 $
+ * @copyright	Copyright (C) 2005 - 2010 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+// No direct access
+defined('_JEXEC') or die;
+
+jimport('joomla.application.component.modeladmin');
+
+require_once dirname(__FILE__).DS.'article.php';
+
+/**
+ * Feature model.
+ *
+ * @package		Joomla.Administrator
+ * @subpackage	com_content
+ */
+class ContentModelFeature extends ContentModelArticle
+{
+	/**
+	 * Returns a Table object, always creating it.
+	 *
+	 * @param	type	The table type to instantiate
+	 * @param	string	A prefix for the table class name. Optional.
+	 * @param	array	Configuration array for model. Optional.
+	 * @return	JTable	A database object
+	*/
+	public function getTable($type = 'Featured', $prefix = 'ContentTable', $config = array())
+	{
+		return JTable::getInstance($type, $prefix, $config);
+	}
+
+	/**
+	 * A protected method to get a set of ordering conditions.
+	 *
+	 * @param	object	A record object.
+	 * @return	array	An array of conditions to add to add to ordering queries.
+	 * @since	1.6
+	 */
+	protected function getReorderConditions($table = null)
+	{
+		$condition = array();
+		return $condition;
+	}
+}
